--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 
 <body>
 
-    <header>
-Header
+    <header class="full-l">Header</header>
 
-    </header>
-<nav>Nav</nav>
+    <nav class="full-l">Nav</nav>
 
 
 <section>Section
-<article>
-    <h1>h1, h2, h3</h1>
-    <p> p</p>
+<article> Article
+    <div id="h1"> H1, h2, h3</div>
+    <div id="p"> p </div>
+
 </article>
+
 </section>
 <aside>Aside</aside>
 
-<footer>footer</footer>
+<footer class="footer">footer</footer>
 
 </body>
 </html>
