--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="full-l">Header</header>
 
     <nav class="full-l">Nav</nav>
-    
+
 <section>Section
 <article> Article
     <div id="h1"> H1, h2, h3</div>
@@ -23,7 +23,7 @@
 </article>
 </section>
 
-<aside>Aside</aside>
+<aside id="aside">Aside</aside>
 
 <footer class="footer">footer</footer>
 
