--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <div id="h1"> H1, h2, h3</div>
     <div id="p"> p </div>
 
+
 </article>
 </section>
 
-<aside id="aside">Aside</aside>
+<aside>Aside</aside>
 
 <footer class="footer">footer</footer>
 
