something someting fixes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <section>Section
 <article> Article
-    <div id="h1"> H1, h2, h3</div>
+    <div id="h1"> <h1>H1, h2, h3</h1></div>
     <div id="p"> p </div>
 
 
